@@ -146,7 +146,7 @@ enum vm_regan_acttype {
 /**********************************************************/
 
 #define COPY_CREF_OMOD(c1, c2) do {  \
-  RB_OBJ_WRITE((c1), &CREF_REFINEMENTS(c1), CREF_REFINEMENTS(c2)); \
+  CREF_REFINEMENTS_SET(c1, CREF_REFINEMENTS(c2)); \
   if (!NIL_P(CREF_REFINEMENTS(c2))) { \
       CREF_OMOD_SHARED_SET(c1); \
       CREF_OMOD_SHARED_SET(c2); \
@@ -154,11 +154,11 @@ enum vm_regan_acttype {
 } while (0)
 
 #define COPY_CREF(c1, c2) do {  \
-  NODE *__tmp_c2 = (c2); \
-  COPY_CREF_OMOD(c1, __tmp_c2); \
-  RB_OBJ_WRITE((c1), &CREF_CLASS(c1), CREF_CLASS(__tmp_c2)); \
+  rb_cref_t *__tmp_c2 = (c2); \
+  COPY_CREF_OMOD((c1), __tmp_c2); \
+  CREF_CLASS_SET((c1), CREF_CLASS(__tmp_c2));\
   CREF_VISI_SET((c1), CREF_VISI(__tmp_c2));\
-  RB_OBJ_WRITE((c1), &CREF_NEXT(c1), CREF_NEXT(__tmp_c2)); \
+  CREF_NEXT_SET((c1), CREF_NEXT(__tmp_c2));\
   if (CREF_PUSHED_BY_EVAL(__tmp_c2)) { \
       CREF_PUSHED_BY_EVAL_SET(c1); \
   } \
